--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
   },
   "homepage": "https://github.com/davudk/react-utils#readme",
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@types/react": "^16.8.0",
-    "@types/react-dom": "^16.8.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^4.5.2"
+    "@types/react": ">=16.8.0",
+    "@types/react-dom": ">=16.8.0",
+    "npm-run-all": "4.1.5",
+    "typescript": "4.5.2"
   },
   "files": [
     "/lib"
